<resources>

    <!-- General -->
    <string name="app_name">SpaceOdysseyApp</string>
    <string name="mainMenu">Menu Principal</string>
    <string name="scoreboard">Tableau des scores</string>
    <string name="subTitle">Sous-titre</string>
    <string name="title">Titre</string>
    <string name="whatWantToDo">Que voulez vous faire ?</string>

    <!-- Menu -->
    <string name="about">A propos</string>
    <string name="account">Compte</string>

    <!-- Main Screen -->
    <string name="didYouKnowText">Sed laeditur hic coetuum magnificus splendor levitate paucorum incondita, ubi nati sunt non reputantium, sed tamquam indulta licentia vitiis ad errores lapsorum ac lasciviam. ut enim Simonides lyricus docet, beate perfecta ratione vieturo ante alia patriam esse convenit gloriosam.</string>
    <string name="didYouKnowTitle">Le saviez vous ?</string>
    <string name="lesson">Cours</string>
    <string name="toLogIn">Se connecter</string>
    <string name="logIn">Me connecter</string>
    <string name="news">Actualités</string>
    <string name="quiz">Quiz</string>
    <string name="welcome">Bienvenue</string>
    <string name="whatToDo">Qu\'allez vous faire aujourd\'hui ?</string>

    <!-- LogIn & Register -->
    <string name="mail">Mail</string>
    <string name="mailExample">mail@mail.com</string>
    <string name="myIds">Mes identifiants</string>
    <string name="notAccountYet">Pas encore de compte ?</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="passwordConfirmation">Confirmer le mot de passe</string>
    <string name="register">Créer mon compte</string>

    <!-- Quiz home Screen-->
    <string name="playAQuiz">Jouer</string>

    <!-- set up a quiz Screen-->
    <string name="easy">Facile</string>
    <string name="launch">Lancer</string>
    <string name="level">Difficulté</string>
    <string name="theme">Thème</string>
    <string name="planetSystems">Systèmes planétaires</string>

    <!-- play a quiz Screen-->
    <string name="answerBad">Mauvaise réponse…</string>
    <string name="answerGood">Bonne réponse</string>
    <string name="answersGood">bonne(s) réponse(s)</string>
    <string name="answersNbGoodAnswers">%1$d / %2$d</string>
    <string name="answerNonExistent">Temps écoulé !</string>
    <string name="defaultNumber">0</string>
    <string name="explanation">La réponse correcte est que .... en effet ... C\'est ici qu\'est expliqué de manière concise la réponse à la question posée pour que l\'utilisateur puisse s\'instruire</string>
    <string name="next">Suivant</string>
    <string name="newGame">Nouvelle partie</string>
    <string name="questionByDefault">Ceci est il une question par défaut ?</string>
    <string name="questionNumber">Question n° </string>
    <string name="questionNumberMax">/ %1$d</string>
    <string name="result">Résultat :</string>
    <string name="scoreEvolution0">0 point …</string>
    <string name="scoreEvolution">+ %1$d points</string>
    <string name="sec">10 sec</string>
    <string name="score">Score : %1$d</string>
    <string name="timeRemain">Temps restant : </string>

    <!-- warnings -->
    <string name="warningNotLogged">Tu n\'es pas connecté, tes résultats ne pourront être sauvegardés…</string>

    <!-- error messages -->
    <string name="errorEmptyField">Au moins l\'un des champs est vide.</string>
    <string name="errorGeneric">Oups ! Un problème est survenu, nous t\'invitons à réessayer plus tard …</string>
    <string name="errorLackOfQuestions">Nous n\'avons pas suffisamment de questions pour ces paramètres … nous t\'invitons à les changer.</string>
    <string name="errorLengthOverflow">Au moins l\'un des champs contient trop de caractères.</string>
    <string name="errorMailFormat">Le mail saisi semble invalide</string>
    <string name="errorPasswordCorrespondence">Les mots de passes ne correspondent pas.</string>
    <string name="errorPasswordFormat">Le mot de passe saisi est invalide. Veuillez utiliser au moins une majuscule, une minuscule, un chiffre et un caractère spécial…</string>
</resources>

