<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_resultQuiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_marginTop="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/text_white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_resultQuizCurrentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultNumber"
            android:textColor="@color/text_red"
            android:layout_marginStart="5dp"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_resultQuizGoodAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answersNbGoodAnswers"
            android:textColor="@color/text_red"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answersGood"
            android:textColor="@color/text_white"
            android:layout_marginStart="5dp"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_resultQuizNewGame"
            android:layout_width="225dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/time_and_space_regular"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/newGame"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_resultQuizScoreBoard"
            android:layout_width="225dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/time_and_space_regular"
            android:textSize="20sp"
            android:text="@string/scoreboard"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_resultQuizMainMenu"
            android:layout_width="225dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mainMenu"
            android:fontFamily="@font/comfortaa_bold"
            android:textSize="16sp"
            app:backgroundTint="@color/btn_yellow_orange" />
    </LinearLayout>
</LinearLayout>