<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_setUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    tools:context=".controller.quiz.SetUpQuizActivity">

    <include
        layout="@layout/element_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:id="@+id/layout_param"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <TextView
            android:id="@+id/tv_spinner_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/theme"
            android:textSize="18sp" />

        <!-- temporary to do: change with a spinner-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/planetSystems"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_spinner_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/level"
            android:textSize="18sp" />

        <!-- temporary to do: change with a spinner-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/easy"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/pb_setUpQuizLoadPB"
            style="@android:style/Widget.Material.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminateBehavior="repeat"
            android:indeterminateTint="@color/text_yellow_orange"
            android:minWidth="50dp"
            android:progress="70"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLaunchQuiz"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:onClick="onClickPlayQuiz"
            android:text="@string/launch" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/warningNotLogged"
            android:textColor="@color/text_red"
            android:textSize="18sp"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>
</LinearLayout>