<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/background"
    tools:context=".controller.account.LogInActivity">

    <include layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="35dp"
        android:layout_weight="0.15"
        android:text="@string/myIds"
        android:textSize="32sp"
        android:textColor="@color/text_yellow_orange"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_logInPseudo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pseudo"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:errorEnabled="true"
            android:paddingBottom="8dp">

             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_logInPseudo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_logInPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_logInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logIn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/btn_yellow_orange"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/logIn"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAccountYet"
                android:textColor="@color/text_white"
                android:textAlignment="viewEnd"
                android:fontFamily="@font/comfortaa_bold"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_goToRegisterScreen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/account_button"
                android:foreground="@drawable/account_button"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>